# BitstampTax

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt
.github/: FUNDING.yml
data/: 2021-02-01_Transactions.csv  2021-11-01_Transactions.csv
src/: CMakeLists.txt
src/app/: AboutDialog.cpp  AboutDialog.h  BitstampTax.cpp  BitstampTax.h  CMakeLists.txt  Ids.h  InputParams.cpp  InputParams.h  MainFrame.cpp  MainFrame.h  TaxCurrencySettings.cpp  TaxCurrencySettings.h  TaxCurrencySettingsDialog.cpp  TaxCurrencySettingsDialog.h  Version.h  default.rc  main.cpp
src/currency/: CMakeLists.txt  CurrencyType.cpp  CurrencyType.h  CurrencyValue.cpp  CurrencyValue.h
src/input/: CMakeLists.txt  FileHandlerTaxCurrencySettings.cpp  FileHandlerTaxCurrencySettings.h  FileReader.cpp  FileReader.h
src/tax/: CMakeLists.txt  Tax.cpp  Tax.h  TaxFifo.cpp  TaxFifo.h
src/trade_book/: CMakeLists.txt  TradeBook.cpp  TradeBook.h  TradeItem.cpp  TradeItem.h  TradeItemDeposit.cpp  TradeItemDeposit.h  TradeItemFwd.h  TradeItemMarket.cpp  TradeItemMarket.h  TradeItemWithdrawal.cpp  TradeItemWithdrawal.h  TradePair.cpp  TradePair.h  TradeType.cpp  TradeType.h
src/types/: CMakeLists.txt  Decimal.cpp  Decimal.h
src/utils/: CMakeLists.txt  HashName.cpp  HashName.h  Log.cpp  Log.h  Singleton.cpp  Singleton.h  TimeUtils.cpp  TimeUtils.h
